--- a/htdocs/templates/administration/personnes_morales.html
+++ b/htdocs/templates/administration/personnes_morales.html
@@ -134,7 +134,7 @@
                     {else}
                         <span class="ui mini red label">Inactif</span>
                     {/if}
-                    <a href="index.php?page=personnes_physiques&action=modifier&id={$personne_physique.id}">
+                    <a href="/admin/members/users/edit?id={$personne_physique.id}">
                         {$personne_physique.nom} {$personne_physique.prenom}
                     </a>
                 </div>
