--- a/htdocs/templates/administration/cotisations.html
+++ b/htdocs/templates/administration/cotisations.html
@@ -13,7 +13,7 @@
             </div>
         </a>
         {if $type_personne == 0}
-            <a href="index.php?page=personnes_physiques&amp;action=modifier&amp;id={$id_personne}" class="item">
+            <a href="/admin/members/users/edit?id={$id_personne}" class="item">
                 <i class="user icon"></i>
                 Voir la fiche de la personne physique
             </a>
