--- a/htdocs/css/forms_company.css
+++ b/htdocs/css/forms_company.css
@@ -195,3 +195,12 @@
     display: inline-block;
     max-width: 45%;
 }
+
+.company-invitation-accept {
+    display: flex;
+    text-decoration: none;
+}
+
+.company-invitation-accept button {
+    margin: 3em auto;
+}
